--- a/_config.yml
+++ b/_config.yml
@@ -14,19 +14,19 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: iOS Insight Notes
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 코드보다 개념, 관습보다 원리를 먼저 이해하고 구현합니다 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Swift, UIKit, SwiftUI 기반의 iOS 아키텍처 설계와 클린 코드 작성 원칙을 심화 정리한 기술 블로그입니다. 단순 구현이 아닌 구조적 이해를 바탕으로, 실무 감각을 기르는 데 초점을 둡니다.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: landelyse # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -34,12 +34,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: 박진홍
+  email: wlsghd70@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://velog.io/@landelyse/posts # change to your Twitter homepage
+    - https://github.com/landelyse # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
