docs: test post and markdown

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,9 +2,14 @@
 
 - type: github
   icon: "fab fa-github"
+  
+#
+#- type: twitter
+#  icon: "fa-brands fa-x-twitter"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: velog
+  icon: "fa-solid fa-book"
+  url: 'https://velog.io/@landelyse/posts'
 
 - type: email
   icon: "fas fa-envelope"
