--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: 박진홍
+  name: 지농
   email: wlsghd70@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -98,7 +98,8 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/landelyse.png
+avatar_absolute: true
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
