--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: iOS Insight Notes
 tagline: 코드보다 개념, 관습보다 원리를 먼저 이해하고 구현합니다 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Swift, UIKit, SwiftUI 기반의 iOS 아키텍처 설계와 클린 코드 작성 원칙을 심화 정리한 기술 블로그입니다. 단순 구현이 아닌 구조적 이해를 바탕으로, 실무 감각을 기르는 데 초점을 둡니다.
+  iOS, Swift, Xcode, 설계원칙, CS를 학습하고 기록합니다.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
