--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -44,6 +44,17 @@ jobs:
         with:
           ruby-version: 3.3
           bundler-cache: true
+        timeout-minutes: 10
+        continue-on-error: false
+
+      - name: Bundle install with retry
+        run: |
+          for i in {1..3}; do
+            bundle install && break || {
+              echo "Bundle install failed, retrying in 30 seconds... (attempt $i/3)"
+              sleep 30
+            }
+          done
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
