fix: disable bundler cache to resolve network issues

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -43,9 +43,8 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3
-          bundler-cache: true
+          bundler-cache: false
         timeout-minutes: 10
-        continue-on-error: false
 
       - name: Bundle install with retry
         run: |
