--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -43,7 +43,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3
-          bundler-cache: false
+          bundler-cache: true
         timeout-minutes: 10
 
       - name: Bundle install with retry
